[gd_scene load_steps=10 format=3 uid="uid://dvjvpdafxerwn"]

[ext_resource type="PackedScene" uid="uid://b14r5butfkten" path="res://actors/player.tscn" id="1_1ts6d"]
[ext_resource type="Script" path="res://scenes/main_game.gd" id="1_hws7p"]
[ext_resource type="PackedScene" uid="uid://c3bxng6l2algc" path="res://actors/game_camera.tscn" id="5_7nf5h"]
[ext_resource type="PackedScene" uid="uid://ds1vfulxqv3xv" path="res://actors/end_flag.tscn" id="10_0kxe8"]
[ext_resource type="Texture2D" uid="uid://v4cgdqta0bhk" path="res://assets/hdri/rocky_ridge_puresky_2k.hdr" id="10_t7arf"]
[ext_resource type="PackedScene" uid="uid://dt8ohiqvrdwg4" path="res://ui/in_game/in_game_menus.tscn" id="12_itv2k"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3bwc1"]
sky_cover = ExtResource("10_t7arf")
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(1, 1, 1, 1)

[sub_resource type="Sky" id="Sky_ta835"]
sky_material = SubResource("ProceduralSkyMaterial_3bwc1")

[sub_resource type="Environment" id="Environment_7e5bw"]
background_mode = 2
background_color = Color(0, 0.372549, 0.45098, 1)
sky = SubResource("Sky_ta835")
volumetric_fog_density = 0.02

[node name="MainGame" type="Node"]
script = ExtResource("1_hws7p")

[node name="InGameMenus" parent="." instance=ExtResource("12_itv2k")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7e5bw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.969719, 0.171807, -0.173573, 5.00435e-08, 0.710713, 0.703482, 0.244224, -0.68218, 0.689192, -15.5535, 15.3114, 2.07461)
light_color = Color(0.439216, 0.431373, 0.415686, 1)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_1ts6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="GameCamera" parent="." instance=ExtResource("5_7nf5h")]

[node name="EndFlag" parent="." instance=ExtResource("10_0kxe8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 573.95, 0.204276, 3.29792)
monitoring = false

[connection signal="countdown_finished" from="InGameMenus" to="." method="_on_countdown_finished"]
[connection signal="exit_pressed" from="InGameMenus" to="." method="_on_exit_pressed"]
[connection signal="pause_pressed" from="InGameMenus" to="." method="_on_pause_pressed"]
[connection signal="restart_pressed" from="InGameMenus" to="." method="_on_restart_pressed"]
[connection signal="resume_pressed" from="InGameMenus" to="." method="_on_resume_pressed"]
[connection signal="start_pressed" from="InGameMenus" to="." method="_on_start_pressed"]
[connection signal="body_entered" from="EndFlag" to="." method="_on_end_flag_body_entered"]
